# Real_Time_Messaging_Site

./: .gitignore  README.md  code  docker-compose.yml  schema.sql
backend/: .env  Cargo.toml  Dockerfile
backend/.sqlx/: query-06c945e50567c6801f1346d436cdc86a82a4e13dd45d8286295ba37cdbdc045e.json  query-1119d94d84036c2022d578bb62f2d295cf494b1eb53f79820902577dbceacf04.json  query-135a027101c91393fa98deca4a0355da6bd8c85f0d0ed2cc386fcf4c05c3b0c3.json  query-1636eff55e28ff14fca6339db3cecdd63c465327ec61c57591f121dd123fc2c4.json  query-288a30cd85defbe8dd9965aa272ed54efb536b5623c98f562064de1159173ad7.json  query-2e61cd30a6cd3e0937dd096b4f94493e8bcb8c10687d0f8c0592fe38ed956fa6.json  query-3ba48191513dd31cae22e79b577828cb22c6349823de71021b535c02b2477975.json  query-52966a5a12df6c5d2c0b73e3a37985e64a232d4730610696d37a1eab2894c81b.json  query-5916a3fe15310f7d59f7c23e984b6e3f204b61316f9cc0288839726c3231c8f2.json  query-6f37a8e544ae0cc59898ae37ae7cc243fdbe021021ee1e6bffaa741bd4e7ebee.json  query-744fa234efa17362bb79a5024cfd778be028974e250b532ecbf5c306cec8548b.json  query-8c7824b08f61dbb2cfd51c441862d14f06b0b1c07ab8b0e2dd8f3ba3d2f9b4f8.json  query-9a386a45476deb144406a59361260354772959586848bbabc77e5418fba90681.json  query-9f9215a05f729db6f707c84967f4f11033d39d17ded98f4fe9fb48f3d1598596.json  query-a245f6f170b608b1ad177bc5437efd74115c134ec4646415ea38a3d8c5b00dc4.json  query-b54e2b35d67955b5872f5ad2a15443f68369067db6fdd2a7fd319f08f0e9b238.json  query-d6f7424e348dc2d3d345692368014f66e360123b65e659f624e71f6315e1f943.json  (+4 more)
backend/src/: db.rs  errors.rs  main.rs  redis_client.rs
(+19 files in other folders)
